tests/trybuild/post-entrypoint.stderr
error[E0599]: no method named `post` found for struct `Client` in the current scope
 --> tests/trybuild/post-entrypoint.rs:5:77
  |
5 |     let _response: Result<RestResponse, shared_restapi::RestError> = client.post(
  |                                                                      -------^^^^ method not found in `Client`
